Use ArrayDeque in JapaneseCompletionFilter